--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
        
   <main id="event-container">
     <!-- Events will be dynamically populated here -->
+
+    <!-- Add New Event Form -->
+     <div id="add-event-form" class="add-event-form">
+       <h3>Add New Event</h3>
+       <input type="text" id="event-title" placeholder="Event Title" />
+       <textarea id="event-body" placeholder="Event Description"></textarea>
+       <button id="add-event"style="display: none;">Add Event</button>
+     </div>
   </main>
   </div>
   <!-- Footer Section -->
