--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
    <div id="events">
         <h2 class="Title">Upcoming Eco-Friendly Landscape Events</h2>
-       
+        <div id="loading-message" style="display: none;">Loading events...</div>
   <main id="event-container">
     <!-- Events will be dynamically populated here -->
 
